--- a/Examples/DV_Handlebars/Example_Handlebars.csproj
+++ b/Examples/DV_Handlebars/Example_Handlebars.csproj
@@ -53,13 +53,11 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ObjectModel.cs" />
     <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="HubTemplate.Handlebars" />
-    <None Include="sample2_withoutList.json" />
+    <None Include="Template.Handlebars" />
     <None Include="sample.json" />
     <None Include="packages.config" />
   </ItemGroup>
