--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ClassLibrary/DataWarehouseAutomation/Test_Project/obj/Debug/Test_Project.csproj.
 ClassLibrary/DataWarehouseAutomation/Test_Project/obj/Debug/Test_Project.csprojAssemblyReference.cache
 Examples/DV_Handlebars/obj/Debug/Example_Handlebars.csproj.CoreCompileInputs.cache
 Examples/DV_Handlebars/obj/Debug/Example_Handlebars.csprojAssemblyReference.cache
+ClassLibrary/DataWarehouseAutomation/.vs/DataWarehouseAutomation/v15/.suo
