Created list object for filename in test project, to support many tests.

--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="SampleFiles\sample.json" />
+    <None Include="SampleFiles\sampleBasic.json" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataWarehouseAutomation\DataWarehouseAutomation.csproj">
