--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -58,6 +58,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="SampleFiles\sampleCalculation.json" />
+    <None Include="SampleFiles\sampleSourceQuery.json" />
     <None Include="SampleFiles\sampleBasic.json" />
   </ItemGroup>
   <ItemGroup>
