--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -59,6 +59,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="SampleFiles\sampleCalculation.json" />
+    <None Include="SampleFiles\sampleTEAM_Hub.json" />
     <None Include="SampleFiles\sampleVDW_StagingArea.json" />
     <None Include="SampleFiles\sampleVDW_Hub.json" />
     <None Include="SampleFiles\samplesSimpleDDL.json" />
