--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -61,6 +61,7 @@
     <None Include="SampleFiles\sampleCalculation.json" />
     <None Include="SampleFiles\sampleTEAM_Hub.json" />
     <None Include="SampleFiles\sampleTEAM_LSAT.json" />
+    <None Include="SampleFiles\sampleTEAMv16.json" />
     <None Include="SampleFiles\sampleVDW_HubWithLookup.json" />
     <None Include="SampleFiles\sampleVDW_StagingArea.json" />
     <None Include="SampleFiles\sampleVDW_Hub.json" />
