--- a/Examples/DV_Handlebars/Example_Handlebars.csproj
+++ b/Examples/DV_Handlebars/Example_Handlebars.csproj
@@ -57,9 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="sampleBasicWithExtensions.json" />
     <None Include="sampleSimpleDDL.json" />
-    <None Include="TemplateSimpleDDL.Handlebars" />
-    <None Include="Template.Handlebars" />
+    <None Include="TemplateSampleBasicWithExtensions.Handlebars" />
+    <None Include="TemplateSampleSimpleDDL.Handlebars" />
+    <None Include="TemplateSampleBasic.Handlebars" />
     <None Include="sampleBasic.json" />
     <None Include="packages.config" />
   </ItemGroup>
