https://github.com/RoelantVos/Data_Warehouse_Automation_Metadata_Interface/issues/9
Added support for multiple data object sources in a data object mapping.

--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -65,7 +65,7 @@
     <None Include="SampleFiles\sampleVDW_HubWithLookup.json" />
     <None Include="SampleFiles\sampleVDW_StagingArea.json" />
     <None Include="SampleFiles\sampleVDW_Hub.json" />
-    <None Include="SampleFiles\samplesSimpleDDL.json" />
+    <None Include="SampleFiles\sampleSimpleDDL.json" />
     <None Include="SampleFiles\sampleSourceQuery.json" />
     <None Include="SampleFiles\sampleBasic.json" />
   </ItemGroup>
