Updated and tested examples for upgrades related to https://github.com/RoelantVos/Data_Warehouse_Automation_Metadata_Interface/issues/9.

--- a/Examples/DV_Handlebars/Example_Handlebars.csproj
+++ b/Examples/DV_Handlebars/Example_Handlebars.csproj
@@ -57,8 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="sampleMultipleDataItemMappings.json" />
     <None Include="sampleBasicWithExtensions.json" />
     <None Include="sampleSimpleDDL.json" />
+    <None Include="TemplateSampleMultipleDataItemMappings.Handlebars" />
     <None Include="TemplateSampleBasicWithExtensions.Handlebars" />
     <None Include="TemplateSampleSimpleDDL.Handlebars" />
     <None Include="TemplateSampleBasic.Handlebars" />
