--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/Test_Project.csproj
@@ -58,7 +58,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="SampleFiles\sampleBasicWithExtensions.json" />
     <None Include="SampleFiles\sampleCalculation.json" />
+    <None Include="SampleFiles\sampleMultipleDataItemMappings.json" />
     <None Include="SampleFiles\sampleTEAM_Hub.json" />
     <None Include="SampleFiles\sampleTEAM_LSAT.json" />
     <None Include="SampleFiles\sampleTEAMv16.json" />
