Solved bug https://github.com/RoelantVos/Data_Warehouse_Automation_Metadata_Interface/issues/11, where the query item was not properly picked up.

--- a/Examples/DV_Handlebars/Example_Handlebars.csproj
+++ b/Examples/DV_Handlebars/Example_Handlebars.csproj
@@ -57,9 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="sampleCalculation.json" />
     <None Include="sampleMultipleDataItemMappings.json" />
     <None Include="sampleBasicWithExtensions.json" />
     <None Include="sampleSimpleDDL.json" />
+    <None Include="TemplateSampleCalculation.Handlebars" />
     <None Include="TemplateSampleMultipleDataItemMappings.Handlebars" />
     <None Include="TemplateSampleBasicWithExtensions.Handlebars" />
     <None Include="TemplateSampleSimpleDDL.Handlebars" />
