--- a/ClassLibrary/DataWarehouseAutomation/Example_Project/Examples.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/Example_Project/Examples.csproj
@@ -39,7 +39,7 @@
       <HintPath>..\..\ClassLibrary\DataWarehouseAutomation\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json.Schema, Version=3.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\ClassLibrary\DataWarehouseAutomation\packages\Newtonsoft.Json.Schema.3.0.11\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.Schema.3.0.13\lib\net45\Newtonsoft.Json.Schema.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
