Added initial CLI for DataWarehouseAutomation
- Enables a file or directory as input and maps this to a certain pattern.
- Specifies output file name and extensions

--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/RunDwhAutomation.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/RunDwhAutomation.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.8.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.8.0\lib\net461\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Handlebars, Version=1.11.5.0, Culture=neutral, PublicKeyToken=22225d0bf33cd661, processorArchitecture=MSIL">
       <HintPath>..\packages\Handlebars.Net.1.11.5\lib\net452\Handlebars.dll</HintPath>
     </Reference>
