--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="Handlebars.Net" version="1.11.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
 </packages>
