--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
+  <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
+  <package id="Fody" version="6.0.0" targetFramework="net472" developmentDependency="true" />
   <package id="Handlebars.Net" version="1.11.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
 </packages>
