--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/RunDwhAutomation.csproj
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/RunDwhAutomation.csproj
@@ -76,9 +76,11 @@
     <Compile Include="HandleBarsHelpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VdwInterfaceObjectModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Example.bat" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
