--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
@@ -5,4 +5,5 @@
   <package id="Fody" version="6.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="Handlebars.Net" version="2.0.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
 </packages>
