Added missing handlebars helpers.

--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
@@ -3,7 +3,7 @@
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="Costura.Fody" version="4.1.0" targetFramework="net472" />
   <package id="Fody" version="6.3.0" targetFramework="net472" developmentDependency="true" />
-  <package id="Handlebars.Net" version="2.0.4" targetFramework="net472" />
+  <package id="Handlebars.Net.1.8.0.Signed" version="1.8.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net472" />
 </packages>
