--- a/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/RunDwhAutomation/packages.config
@@ -3,7 +3,7 @@
   <package id="CommandLineParser" version="2.8.0" targetFramework="net472" />
   <package id="Costura.Fody" version="5.3.0" targetFramework="net472" developmentDependency="true" />
   <package id="Fody" version="6.5.1" targetFramework="net472" developmentDependency="true" />
-  <package id="Handlebars.Net.1.8.0.Signed" version="1.8.0" targetFramework="net472" />
+  <package id="Handlebars.Net" version="2.0.7" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="5.0.2" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
