--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Handlebars.Net.1.8.0.Signed" version="1.8.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json.Schema" version="3.0.13" targetFramework="net461" />
+  <package id="Handlebars.Net" version="2.0.7" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net461" />
 </packages>
