--- a/ClassLibrary/DataWarehouseAutomation/Test_Project/packages.config
+++ b/ClassLibrary/DataWarehouseAutomation/Test_Project/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Handlebars.Net" version="2.0.7" targetFramework="net461" />
+  <package id="Handlebars.Net" version="2.1.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net48" />
   <package id="Newtonsoft.Json.Schema" version="3.0.14" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
