Tiny sample changes

--- a/ClassLibrary/DataWarehouseAutomation/Sample_Metadata/myFirstMapping.json
+++ b/ClassLibrary/DataWarehouseAutomation/Sample_Metadata/myFirstMapping.json
@@ -9,11 +9,11 @@
       ],
       "sourceDataObjects": [
         {
-          "name": "TableOneSource"
+          "name": "MyFirstMappingSource"
         }
       ],
       "targetDataObject": {
-        "name": "HelloWorldExampleTableOne"
+        "name": "SomeCustomerTable"
       },
       "dataItemMappings": [
         {
