--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -1,6 +1,10 @@
 - name: Home
   href: index.md
+- name: Overview
+  href: overview/toc.yml
 - name: Frequently Asked Questions
-  href: faq/faq.md
+  href: faq/toc.yml
 - name: Schema Documentation
-  href: api/
+  href: api/toc.yml
+- name: Handlebars Custom Extensions
+  href: handlebars/toc.yml
