--- a/DataWarehouseAutomation/Sample_Metadata/myFirstMapping.json
+++ b/DataWarehouseAutomation/Sample_Metadata/myFirstMapping.json
@@ -1,7 +1,7 @@
 {
   "dataObjectMappings": [
     {
-      "mappingName": "MyFirstMapping",
+      "name": "MyFirstMapping",
       "mappingClassifications": [
         {
           "classification": "Example"
