--- a/DataWarehouseAutomation/Sample_Metadata/sampleBasicWithExtensions.json
+++ b/DataWarehouseAutomation/Sample_Metadata/sampleBasicWithExtensions.json
@@ -1,7 +1,7 @@
 {
   "dataObjectMappings": [
     {
-      "mappingName": "MappingOne",
+      "name": "MappingOne",
       "sourceDataObjects": [
         {
           "name": "TableOneSource"
